[tool.poetry]
name = "the-endorser"
version = "0.1.0"
description = ""
authors = ["anoduck <11767-anoduck@users.noreply.gitgud.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "the_endorser"}]

[tool.poetry.dependencies]
python = "^3.11"
decorator = "5.1.1"
graphviz = "0.20.1"
pyyaml = "6.0.1"
selenium = "4.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
